--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="https://cdn.freakhosting.com/website/favicon.ico">
 
-    <title>FREAKHOSTING - Web Hosting & Game Server Provider</title>
+    <title>KadilacHost - Web Hosting & Game Server Provider</title>
 
-    <meta name="description" content="FREAKHOSTING offers premium web and game server hosting with DDoS protection, domain registrations, VPS and Dedicated Servers. Get high-performance Minecraft, Counter Strike, and FiveM servers starting at €0.99/month">
+    <meta name="description" content="KadilacHost offers premium web and game server hosting with DDoS protection, domain registrations, VPS and Dedicated Servers. Get high-performance Minecraft, Counter Strike, and FiveM servers starting at €0.99/month">
 
     <meta name="keywords" content="web hosting, game server hosting, Minecraft hosting, Counter Strike hosting, FiveM hosting, VPS hosting, dedicated servers, premium DDoS protection, instant setup, 24/7 support, domain registration, ultra-fast infrastructure, SFTP access, MySQL database, game panel, Pterodactyl panel, affordable hosting, high-performance servers, AMD Ryzen hosting">
 
